# economia_light

./: README.md  dune-project  economia_light.opam
example/: expenses.txt
lib/: dune  error.ml  error.mli  lexer.ml  lexer.mli  location.ml  parser.ml  parser.mli
test/: dune  lexer_test.ml
